# Docket

./: .config.json.example  .flake8  .gitignore  LICENSE  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
bot/: __init__.py  __main__.py  bot.py  config.py  event_middleware.py  models.py
bot/core/: callbacks.py  dot_dict.py  event.py  event_middleware.py  lua_executor.py  lua_py_dict.py  sync_async.py
bot/core/lua/: callbacks.py  executor.py  lua_py_dict.py
bot/plugins/: events.py  info.py
docket/: __main__.py  bot.py  config.py  errors.py  events.py  undefined.py
docket/core/: event_middleware.py  serialize.py  sync_async.py
docket/core/lua/: boot.lua  callbacks.py  executor.py  runtime.py
docket/database/: database.py
docket/database/migrations/0000/: describe.json  migrations.sql
docket/database/models/: event.py  guild.py  script.py
docket/plugins/: _checks.py  _group.py  config.py  config_event_triggers.py  config_scripts.py  error.py  events.py  info.py  upload.py
