[tool.poetry]
name = "bot"
version = "0.1.0"
description = "The TagScript Bot"
authors = ["Lunarmagpie <Bambolambo0@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
hikari = "^2.0.0-alpha.108"
hikari-crescent = "^0.1.0"
python-dotenv = "^0.20.0"
mypy = "^0.960"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
